Bug 83682 - systemd-journal-remote: assertion failed
Summary: systemd-journal-remote: assertion failed
Status: RESOLVED FIXED
Alias: None
Product: systemd
Classification: Unclassified
Component: general (show other bugs)
Version: unspecified
Hardware: Other Linux (All)
: medium normal
Assignee: systemd-bugs
QA Contact: systemd-bugs
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-09-09 18:59 UTC by Philipp Klein
Modified: 2014-09-25 22:21 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Philipp Klein 2014-09-09 18:59:18 UTC
I am trying to grab journal logs from a remote host, but when I try to invoke systemd-journal-remote like in the example in the man page it fails:

$ sudo /usr/lib/systemd/systemd-journal-remote --url http://10.0.0.10:19531

Received 0 descriptors
Spawning curl http://10.0.0.10:19531/entries...
File /var/log/journal/remote/remote-presentr.at:19531.journal corrupted or uncleanly shut down, renaming and replacing.
Opened output file /var/log/journal/remote/remote-presentr.at:19531.journal
Assertion 'h' failed at src/shared/hashmap.c:477, function hashmap_put(). Aborting.

I also tried the -o/--output option both with a directory and a file and it also fails. (The man page is a bit unclear as it says for active sources the -o/--output is required, but the example doesn't use it).

The assertion also fails (with the same message) when I use a passive source.

OS and program versions:
Arch Linux, kernel 3.16.1
systemd 216

Original bug report here: https://bugs.archlinux.org/task/41884

PS: the host I tried to connect hast systemd-journal-gatewayd running and I can access it via browser. libmicrohttpd is als installed.
Comment 1 Zbigniew Jedrzejewski-Szmek 2014-09-25 22:21:05 UTC
Should be fixed with http://cgit.freedesktop.org/systemd/systemd/commit/?id=22259a00fd.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.